<resources>
    <string name="app_name">Yubaca</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>

    <string name="error_icon">Error Icon</string>
    <string name="oops_error">Oops Error</string>

    <string name="refresh">Refresh</string>
    <string name="oops_no_data">Oops, Tidak ada berita</string>
    <string name="oops_no_data_try_type_again">Oops No Data, try type again</string>

    <string name="text_lorem">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="add_favorite">Ditambahkan ke Favorite</string>
    <string name="del_favorite">Dihapus dari Favorite</string>

</resources>